# Chip8_Emulator_Rust

./: .gitignore  Cargo.toml  README.md
src/: chip8_tests.rs  main.rs
src/chip8/: mod.rs  tests.rs
