[package]
name = "chip8_emulator"
version = "0.3.0"
authors = ["Attila <attila@kageru.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
clap = "2"
sdl2 = { version = "0.32.0", features = ["bundled", "static-link"] }